--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,11 +82,12 @@ nav {
     font-size: 2rem;
 }
 
-/* Main */
+/* Main contant */
 main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
-    flex: 1 0 auto
+    flex: 1 0 auto;
+    margin-top: 47px;
 }
 
 /* Footer */
