--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,7 @@ main {
 #reasons {
     width: 90%;
     margin: 20px auto;
+        
 }
 
 #reasons h2 {
@@ -138,6 +139,22 @@ main {
 #benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px o;
+}
+#circle-cover-bg {
+background: url("../images/reasons-image.webp") no-repeat center center/cover;
+height: 90vw;
+width: 90vw;
+margin-bottom: 20px;
+/*makes the square image into a circle */
+border-radius: 50%;
+max-width: 300px;
+max-height: 300px;
+}
+
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Footer */
