--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,15 +10,17 @@
 
 /* General styles */
 body {
-   min-height: 100vh;
-   display: flex;
-   flex-direction: column;
-   /* Generic project styles */
-   color: #3a3a3a;
-   font-family: 'Lato', sans-serif; 
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+    font-family: 'Lato', sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -49,7 +51,7 @@ header a {
     list-style-type: none;
 }
 
-#menu > li {
+#menu>li {
     margin-bottom: 1em;
 }
 
@@ -109,7 +111,8 @@ main {
     padding-left: 10px;
 }
 
-#cover-text > h2, #cover-text > h3 {
+#cover-text>h2,
+#cover-text>h3 {
     color: #ffffff;
 }
 
@@ -117,7 +120,6 @@ main {
 #reasons {
     width: 90%;
     margin: 20px auto;
-        
 }
 
 #reasons h2 {
@@ -126,8 +128,8 @@ main {
     font-size: 280%;
 }
 
-#benefits-physical > div,
-#benefits-mental > div {
+#benefits-physical>div,
+#benefits-mental>div {
     line-height: 20px;
     margin-bottom: 20px;
 }
@@ -140,15 +142,16 @@ main {
     border-top: 1px solid #3a3a3a;
     margin: 5px o;
 }
+
 #circle-cover-bg {
-background: url("../images/reasons-image.webp") no-repeat center center/cover;
-height: 90vw;
-width: 90vw;
-margin-bottom: 20px;
-/*makes the square image into a circle */
-border-radius: 50%;
-max-width: 300px;
-max-height: 300px;
+    background: url("../images/reasons-image.webp") no-repeat center center/cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /*makes the square image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
 }
 
 #benefits-image {
@@ -159,20 +162,23 @@ max-height: 300px;
 
 /* Footer */
 #social-networks {
-text-align: center;
-padding: 20px 0;
-display: flex;
-justify-content: space-evenly;
-list-style-type: none;
-} 
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
 
 #social-networks i {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
 }
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
+
     /* Header */
     nav {
         display: block;
@@ -183,10 +189,10 @@ list-style-type: none;
     }
 
     #menu {
-    display: flex;   
+        display: flex;
     }
 
-    #menu > li {
+    #menu>li {
         padding-left: 1rem;
     }
 
@@ -198,26 +204,73 @@ list-style-type: none;
         font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
-
     }
+
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
 
-/* Hero */
-#cover-text {
-    width: 300px;
-    right: 50px;
-}
+    /* Hero */
+    #cover-text {
+        width: 300px;
+        right: 50px;
+    }
+
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical,
+    #benefits-mental>div {
+        width: 75%;
+    }
+
+    #benefits-mental>div {
+        text-align: end;
+        align-self: flex-end;
+    }
 
 }
 
 /* Large devices (laptops and desktops 992px and up) */
-@media screen and (min-width: 992px){
-#menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
+@media screen and (min-width: 992px) {
+    #menu a:hover {
+        border-bottom: 1px solid #3a3a3a;
+    }
 }
 
+@media screen and (min-width: 1200px) {
+
+    /* Reasons section */
+    #benefits {
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    #benefits>div {
+        flex: 1;
+    }
+
+    #benefits-image {
+        order: 0;
+    }
+
+    #benefits-mental {
+        order: 1;
+    }
+
+    #benefits-mental>div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical>div {
+        align-self: flex-end;
+    }
 }
