--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,14 +18,18 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #252525;
 }
+
+.hidden-heading {
+    display: none;
+}
+
+
 
 /* Header */
 header {
@@ -179,7 +183,6 @@ flex-wrap: wrap;
     flex-grow: 1;
    /* Creates a grid of meetup divs over the background image */
     border: 2px solid white;
-
 }
 
 #times h3 {
