Add styling to Gallery for mobile phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,6 @@ h1, h2, h3 {
     display: none;
 }
 
-
-
 /* Header */
 header {
     background-color: #ffffff;
@@ -190,7 +188,15 @@ flex-wrap: wrap;
     color: #fafafa;
 }
     
+/* Gallery page */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
 
+#photos {
+    line-height: 0;
+}
 /* Footer */
 #social-networks {
     text-align: center;
